<resources>
    <string name="app_name">My APP Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title">My NanoDegree Apps!</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="superduo_scores">SCORES APP</string>
    <string name="superduo_library">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone">CAPSTONE:MY OWN APP</string>
</resources>
