<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_deep_purple_50"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.udacity.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/md_deep_purple_50"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/spotify_streamer"
            style="@style/buttonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spotify_streamer" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/button_margin_normal" />

        <Button
            android:id="@+id/superduo_scores"
            style="@style/buttonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/superduo_scores" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/button_margin_normal" />

        <Button
            android:id="@+id/superduo_library"
            style="@style/buttonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/superduo_library" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/button_margin_normal" />

        <Button
            android:id="@+id/build_it_bigger"
            style="@style/buttonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/build_it_bigger" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/button_margin_normal" />

        <Button
            android:id="@+id/xyz_reader"
            style="@style/buttonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xyz_reader" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/button_margin_normal" />

        <Button
            android:id="@+id/capstone"
            style="@style/buttonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_pink_500"
            android:text="@string/capstone" />
    </LinearLayout>
</LinearLayout>
